# Stalkify

./: CMakeLists.txt  docker-compose.yml  main.c  schema.sql
mysql/include/: mysql_version.h
mysql/lib/: mysqlservices.lib
mysql/lib/mecab/etc/: mecabrc
public/: index.html
